[IWH-138](feat): create delete approval endpoint
created delete approval endpoint, updated documentation

Ticket: https://iwashere.atlassian.net/browse/IWH-138
