# src/posts/dto/delete-approval-request.dto.ts
@@ -1,0 +1,13 @@
+import { IsLatitude, IsLongitude, IsNotEmpty, IsNumber } from 'class-validator';
+
+export class DeleteApprovalRequestDto {
+  @IsLatitude()
+  @IsNumber()
+  @IsNotEmpty()
+  latitude: number;
+
+  @IsLongitude()
+  @IsNumber()
+  @IsNotEmpty()
+  longitude: number;
+}
